fix: update comming z-index

--- a/src/styles/sections/coming.scss
+++ b/src/styles/sections/coming.scss
@@ -8,6 +8,7 @@
     background-position: center;
     background-repeat: no-repeat;
     margin: 50px 0 50px 0;
+    z-index: 10;
 }
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
